@@ -11,6 +11,8 @@ version ?.??.?? (????-??-??):
   - enhancement: added %queue symbol support for helpdesk notification templates [chilan]
   - enhancement: allow to select company/division for financial data export  [chilan]
   - enhancement: added support for helpdesk notification for event add form [chilan]
+  - enhancement: invoices.hide_expositor - variable to hide expositor in pdf invoice generated by tcpdf [interduo]
+  - enhancement: invoices.show_customerid - variable to show customerid in pdf invoice generated by tcpdf [interduo]
 
 version 1.11.23 (2018-03-21):
 
